--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,27 +2,33 @@ name: C++ CI
 
 on:
     push:
-        branches: ["main"]
-        pull_request:
-            branches: ["main"]
+        branches: 
+            - main
+    pull_request:
+        branches:
+            - main
 
 jobs:
     build-and-test:
         runs-on: ubuntu-latest
         
         steps:
-            -name: Check out repository
-            uses: actions/checkout@v3
+            - name: Checkout repository
+              uses: actions/checkout@v3
 
-            -name: Install dependencies
-            run: sudo apt-get update && sudo apt-get install -y cmake build-essential
+            - name: Install dependencies
+              run: |
+                sudo apt-get update && sudo apt-get install -y cmake build-essential
 
-            -name: Configure CMake
-            run: cmake -B build -S .
+            - name: Configure CMake
+              run: |
+                cmake -B build -S .
 
-            -name: Build
-            run: cmake --build build
+            - name: Build
+              run: |
+                cmake --build build
 
-            -name: Run Tests
-            run: ctest --test-dir build
+            - name: Run Tests
+              run: |
+                ctest --test-dir build
              
