made necessary corrections on the CI setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
             - name: Configure CMake
               run: |
-                cmake -B build -S .
+                cmake -B build -S .DCMAKE_CXX_STANDARD=17 
 
             - name: Build
               run: |
