--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,19 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Install dependencies
-              run: sudo apt-get update && sudo apt-get install -y cmake build-essential
+              run: |
+                sudo apt update 
+                sudo apt install -y g++ cmake
 
             - name: Configure CMake
-              run: cmake -B build -S .
+              run: | 
+                cmake -B build -S . -DCMAKE_CXX_STANDARD=17
 
             - name: Build
-              run: cmake --build build
+              run: |
+                cmake --build build
 
             - name: Run Tests
-              run: ctest --test-dir build
+              run: |
+                cd build && ctest --verbose
              
