setting up architectural design n made corrections

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,4 +30,4 @@ add_executable(runTests ${TEST_SOURCES})
 target_link_libraries(runTests PRIVATE DungeonExplorerLib)
 
 add_test(NAME DungeonExplorerTests COMMAND runTests)
-endif()]
+endif()
